--- a/config/database.yml
+++ b/config/database.yml
@@ -19,8 +19,8 @@ development:
   encoding: unicode
   database: sample_app_development
   pool: 5
-  username: sample_app
-  password:
+  username: postgres
+  password: postgres
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -48,13 +48,13 @@ test:
   encoding: unicode
   database: sample_app_test
   pool: 5
-  username: sample_app
-  password:
+  username: postgres 
+  password: postgres
 
 production:
   adapter: postgresql
   encoding: unicode
   database: sample_app_production
   pool: 5
-  username: sample_app
-  password:
+  username: postgres
+  password: postgres
